--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,11 @@
 plugins {
     id 'groovy'
     id 'java'
+    id 'java-gradle-plugin'
 }
+
+apply from: "$rootDir/gradle/integration-test.gradle"
+apply from: "$rootDir/gradle/functional-test.gradle"
 
 group 'com.devsmart'
 version '1.0-SNAPSHOT'
@@ -12,9 +16,21 @@ repositories {
     mavenCentral()
 }
 
+gradlePlugin {
+    plugins {
+        cppPlugin {
+            id = 'com.devsmart.native-library'
+            implementationClass = 'com.devsmart.cppplugin.plugin.NativeLibraryPlugin'
+        }
+    }
+}
+
 dependencies {
     implementation gradleApi()
     implementation localGroovy()
     //compile 'org.codehaus.groovy:groovy-all:2.3.11'
     testImplementation 'junit:junit:4.12'
+    testCompile('org.spockframework:spock-core:1.1-groovy-2.4') {
+        exclude group: 'org.codehaus.groovy'
+    }
 }
